--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-multiplication",
   "version": "1.0.0",
   "description": "node js project",
-  "main": "index.js",
+  "main": "multiplication.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
